finished notebook on tone data collection, output in 'sentiments'

--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -27,18 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"apikey.py\"\n",
+    "%run \"../../../apikey.py\"\n",
     "\n",
     "from watson_developer_cloud import ToneAnalyzerV3, WatsonApiException\n",
+    "import csv\n",
+    "import pandas as pd\n",
     "\n",
     "# version can be 2016-05-19 or 2017-09-21\n",
     "# 2016 version returns between 0 and 1, 2017 returns between 0.5 and 1\n",
     "tone_analyzer = ToneAnalyzerV3(\n",
-    "    version='2016-05-19',\n",
+    "    version='2017-09-21',\n",
     "    username=api['ToneAnalyzer']['username'],\n",
     "    password=api['ToneAnalyzer']['password'],\n",
     "    url=api['ToneAnalyzer']['URL']\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_tone_array(tone_arr_json):\n",
+    "def to_tone_dict(tone_arr_json):\n",
     "    \"\"\"\n",
     "    turn [dict({'score': {float}, 'tone_id': {str}, 'tone_name', {str}})] * {1 <= int <= 6}\n",
     "    into [{float}] * 7 where each index is the score of the tone specified in id_to_key\n",
     "    \"\"\"\n",
-    "    tone_dict = {}\n",
+    "    tone_dict = {'Anger': 0, 'Fear': 0, 'Joy': 0, 'Sadness': 0, 'Analytical': 0, 'Confident': 0, 'Tentative': 0}\n",
     "    for tone in tone_arr_json:\n",
     "        tone_dict[tone['tone_name']] = tone['score']\n",
     "    \n",
-    "    return list(tone_dict.values())"
+    "    return tone_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,62 +108,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tone_distance(tones1, tones2):\n",
+    "    \"\"\"\n",
+    "    find distance between two tone dictionaries\n",
+    "    \"\"\"\n",
+    "    return distance(list(to_tone_dict(tones1).values()), list(to_tone_dict(tones2).values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "document-level tones:\n",
-      "[0.081788, 0.008589, 0.076676, 0.039805, 0.6165]\n",
-      "Team, I know that times are tough!\n",
-      "[0.069592, 0.007056, 0.047162, 0.042664, 0.317869]\n",
-      "0.30035115572109927\n",
-      "Product sales have been disappointing for the past three quarters.\n",
-      "[0.10126, 0.025739, 0.119045, 0.018734, 0.771241]\n",
-      "0.1638815961815114\n",
+      "text:\n",
       "We have a competitive product, but we need to do a better job of selling it!\n",
-      "[0.064169, 0.0379, 0.085963, 0.226295, 0.1997]\n",
-      "0.45799189114109873\n"
+      "\n",
+      "\n",
+      "direct output:\n",
+      "{'document_tone': {'tones': [{'score': 0.6165, 'tone_id': 'sadness', 'tone_name': 'Sadness'}, {'score': 0.829888, 'tone_id': 'analytical', 'tone_name': 'Analytical'}]}, 'sentences_tone': [{'sentence_id': 0, 'text': 'Team, I know that times are tough!', 'tones': [{'score': 0.801827, 'tone_id': 'analytical', 'tone_name': 'Analytical'}]}, {'sentence_id': 1, 'text': 'Product sales have been disappointing for the past three quarters.', 'tones': [{'score': 0.771241, 'tone_id': 'sadness', 'tone_name': 'Sadness'}, {'score': 0.687768, 'tone_id': 'analytical', 'tone_name': 'Analytical'}]}, {'sentence_id': 2, 'text': 'We have a competitive product, but we need to do a better job of selling it!', 'tones': [{'score': 0.506763, 'tone_id': 'analytical', 'tone_name': 'Analytical'}]}]}\n",
+      "\n",
+      "\n",
+      "document-level tones:\n",
+      "{'Anger': 0, 'Fear': 0, 'Joy': 0, 'Sadness': 0.6165, 'Analytical': 0.829888, 'Confident': 0, 'Tentative': 0}\n",
+      "\n",
+      "\n",
+      "Team, I know that times are tough!\n",
+      "{'Anger': 0, 'Fear': 0, 'Joy': 0, 'Sadness': 0, 'Analytical': 0.801827, 'Confident': 0, 'Tentative': 0}\n",
+      "distance to doc_tones: 0.6171382905970104\n",
+      "Product sales have been disappointing for the past three quarters.\n",
+      "{'Anger': 0, 'Fear': 0, 'Joy': 0, 'Sadness': 0.771241, 'Analytical': 0.687768, 'Confident': 0, 'Tentative': 0}\n",
+      "distance to doc_tones: 0.2101020501589643\n",
+      "We have a competitive product, but we need to do a better job of selling it!\n",
+      "{'Anger': 0, 'Fear': 0, 'Joy': 0, 'Sadness': 0, 'Analytical': 0.506763, 'Confident': 0, 'Tentative': 0}\n",
+      "distance to doc_tones: 0.696047423402314\n"
      ]
     }
    ],
    "source": [
-    "doc_tone = result['document_tone']\n",
+    "print('text:')\n",
+    "print(text)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('direct output:')\n",
+    "print(result)\n",
+    "print('\\n')\n",
+    "\n",
+    "doc_tones = result['document_tone']['tones']\n",
     "sentence_tones = result['sentences_tone']\n",
     "print('document-level tones:')\n",
-    "doc_tones = to_tone_array(doc_tone['tone_categories'][0]['tones'])\n",
-    "print(doc_tones)\n",
+    "print(to_tone_dict(doc_tones))\n",
+    "print('\\n')\n",
     "\n",
     "sentences = {}\n",
     "for sentence in sentence_tones:\n",
-    "    sentences[sentence['text']] = to_tone_array(sentence['tone_categories'][0]['tones'])\n",
+    "    sentences[sentence['text']] = sentence['tones']\n",
     "\n",
     "# prints distance from each sentence to the document-level analysis: to figure out which sentence is \n",
     "# the most different in terms of tone from the other sentences\n",
-    "for text in sentences.keys():\n",
+    "for text, tones in sentences.items():\n",
     "    print(text)\n",
-    "    print(sentences[text])\n",
-    "    print(distance(doc_tones, sentences[text]))\n",
-    "    \n",
-    "    \n",
-    "# maybe try a chi-sq test to see which emotion is statistically different?"
+    "    print(to_tone_dict(tones))\n",
+    "    print('distance to doc_tones: ' + str(tone_distance(doc_tones, tones)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read in CSVs\n",
+    "from /data/raw/posts into /data/raw/sentiments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def analyze_tones(text):\n",
+    "    try:\n",
+    "        result = tone_analyzer.tone(\n",
+    "            {'text': text},\n",
+    "            'application/json'\n",
+    "        ).get_result()\n",
+    "        return result\n",
+    "    except WatsonApiException as ex:\n",
+    "        print(\"Method failed with status code \" + str(ex.code) + \": \" + ex.message)\n",
+    "        return None"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#read in data from data folder\n",
+    "input_file = 'battlingdepressionnomeds100'\n",
+    "input_filepath = '../../data/raw/posts/' + input_file + '.csv'\n",
+    "\n",
+    "# analyze data in folder, return analysis into csv\n",
+    "sentiments_doclevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
+    "sentiments_sentencelevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
+    "\n",
+    "with open(input_filepath, 'r') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file)\n",
+    "    for row in csv_reader:\n",
+    "        result = analyze_tones(row['post content'])\n",
+    "        \n",
+    "        # document level tones        \n",
+    "        sentiments_doclevel['post #'].append(row[''])\n",
+    "        sentiments_doclevel['username'].append(row['username'])\n",
+    "        sentiments_doclevel['text'].append(row['post content'])\n",
+    "        doclevel_tones = to_tone_dict(result['document_tone']['tones'])\n",
+    "        for tone in doclevel_tones.keys():\n",
+    "            sentiments_doclevel[tone].append(doclevel_tones[tone])\n",
+    "        \n",
+    "        # if only one sentence- only doc tones, no sentence tone\n",
+    "        if 'sentences_tone' in result:\n",
+    "            # sentence level tones\n",
+    "            for sentence in result['sentences_tone']:\n",
+    "                sentiments_sentencelevel['post #'].append(row[''])\n",
+    "                sentiments_sentencelevel['username'].append(row['username'])\n",
+    "                sentiments_sentencelevel['text'].append(sentence['text'])\n",
+    "                sentencelevel_tones = to_tone_dict(sentence['tones'])\n",
+    "                for tone in sentencelevel_tones.keys():\n",
+    "                    sentiments_sentencelevel[tone].append(sentencelevel_tones[tone])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_doclevel = input_file + '_doclevelsentiments'\n",
+    "output_filename_doclevel = '../../data/raw/sentiments/' + output_file_doclevel + '.csv'\n",
+    "df = pd.DataFrame(sentiments_doclevel)\n",
+    "df.to_csv(output_filename_doclevel)\n",
+    "\n",
+    "output_file_sentencelevel = input_file + '_sentencelevelsentiments'\n",
+    "output_filename_sentencelevel = '../../data/raw/sentiments/' + output_file_sentencelevel + '.csv'\n",
+    "df = pd.DataFrame(sentiments_sentencelevel)\n",
+    "df.to_csv(output_filename_sentencelevel)"
+   ]
   }
  ],
  "metadata": {
