fixed filename, removed index column in sentiment csv

--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -246,19 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# take output and put into raw data output folder\n",
     "output_file_doclevel = input_file + '_doclevelsentiments'\n",
     "output_filename_doclevel = '../../data/raw/sentiments/' + output_file_doclevel + '.csv'\n",
     "df = pd.DataFrame(sentiments_doclevel)\n",
-    "df.to_csv(output_filename_doclevel)\n",
+    "df.to_csv(output_filename_doclevel, index=False)\n",
     "\n",
     "output_file_sentencelevel = input_file + '_sentencelevelsentiments'\n",
     "output_filename_sentencelevel = '../../data/raw/sentiments/' + output_file_sentencelevel + '.csv'\n",
     "df = pd.DataFrame(sentiments_sentencelevel)\n",
-    "df.to_csv(output_filename_sentencelevel)"
+    "df.to_csv(output_filename_sentencelevel, index=False)"
    ]
   }
  ],
