minor changes to pca notebook

--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in data from data folder\n",
-    "input_file = 'battlingdepressionnomeds100'\n",
+    "input_file = 'relationshipproblems100'\n",
     "input_filepath = '../../data/raw/posts/' + input_file + '.csv'\n",
     "\n",
     "# analyze data in folder, return analysis into csv\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
