fixed webscraping algorithm, analyzed 200 posts, put in data/processed/figures

--- a/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
+++ b/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 111,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -12,14 +12,24 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import bs4\n",
     "import re\n",
     "import pandas as pd\n",
     "from datetime import datetime"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get data from forum\n",
+    "\n",
+    "[Forum](https://www.mentalhealthforum.net)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 119,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -28,10 +38,7 @@
    "outputs": [],
    "source": [
     "def _mentalHealthForumScraper(threadnum=97215, pagenum=1):\n",
-    "    if pagenum == 1:\n",
-    "        url = 'https://www.mentalhealthforum.net/forum/thread{}.html'.format(threadnum)\n",
-    "    else:\n",
-    "        url = 'https://www.mentalhealthforum.net/forum/thread{}-{}.html'.format(threadnum, pagenum)\n",
+    "    url = 'https://www.mentalhealthforum.net/forum/thread{}-{}.html'.format(threadnum, pagenum)\n",
     "    forum_html = requests.get(url)\n",
     "    forum_json = forum_html.text\n",
     "\n",
@@ -58,13 +65,11 @@
     "\n",
     "            # quoted someone else\n",
     "            quote_author_html = post_html.find(\"div\", {\"class\":\"bbcode_postedby\"})\n",
-    "        if quote_author_html is not None:\n",
-    "            quote_author = quote_author_html.find(\"strong\").text\n",
-    "        else:\n",
-    "            quote_author = None\n",
+    "            if quote_author_html is not None:\n",
+    "                quote_author = quote_author_html.find(\"strong\").text\n",
+    "            else:\n",
+    "                quote_author = None\n",
     "\n",
-    "        # text without links or quotes\n",
-    "        if post_html.find(\"a\") is not None:\n",
     "            # post.contents will give me the \"contents\" of the post, which means\n",
     "            # everything without the <div> tag can be thrown away, and everything\n",
     "            # with the link we can keep the text for\n",
@@ -72,13 +77,14 @@
     "            # first 2 elements are the '\\n' and the <div></div> tag\n",
     "            post_text = \"\"\n",
     "            for content in post_html.contents:\n",
-    "                if content.string is not None:\n",
-    "                    post_text += content.string\n",
-    "                else:\n",
-    "                    post_text = post_html.text\n",
+    "                if type(content) is bs4.element.NavigableString:\n",
+    "                    post_text += content\n",
+    "                elif content.find(\"div\") is None:\n",
+    "                    if 'title' in content:\n",
+    "                        post_text += content['title']\n",
     "\n",
     "            # edit out any '\\n' s\n",
-    "            post_final = re.sub(\"\\\\n\", \"\", post_text).encode('utf-8', 'replace')\n",
+    "            post_final = re.sub(\"\\\\n\", \" \", post_text).encode('utf-8', 'replace')\n",
     "\n",
     "            users_posts.append([time_obj, username, post_final, quote_author])\n",
     "      \n",
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 55,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,21 +102,19 @@
    "outputs": [],
    "source": [
     "def getNPosts(threadnum=97215, n=50):\n",
-    "    numPosts = 0\n",
     "    posts = []\n",
     "    pagenum = 1\n",
-    "    while numPosts < n:\n",
+    "    while len(posts) < n:\n",
     "        newPosts = _mentalHealthForumScraper(threadnum, pagenum)\n",
     "        for post in newPosts:\n",
     "            posts.append(post)\n",
     "        pagenum += 1\n",
-    "        numPosts += len(newPosts)\n",
     "    return pd.DataFrame(posts, columns=['date', 'username', 'post content', 'quoted user'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 122,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -126,6 +130,13 @@
     "for forum_id, output_file in zip(forum_ids, output_files):\n",
     "    getNPosts(forum_id, num_posts).to_csv(raw_data_directory + output_file + str(num_posts) + '.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
