--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run \"../../../apikey.py\"\n",
+    "%run \"../../../apikey.py\" # outside of actual folder, create own apikey.py if you want to run\n",
     "\n",
     "from watson_developer_cloud import ToneAnalyzerV3, WatsonApiException\n",
     "import csv\n",
@@ -207,59 +207,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in data from data folder\n",
-    "input_file = 'relationshipproblems100'\n",
-    "input_filepath = '../../data/raw/posts/' + input_file + '.csv'\n",
+    "def analyze_posts(input_filepath):\n",
+    "    # analyze data in folder, return analysis into csv\n",
+    "    sentiments_doclevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
+    "    sentiments_sentencelevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
     "\n",
-    "# analyze data in folder, return analysis into csv\n",
-    "sentiments_doclevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
-    "sentiments_sentencelevel = {'post #': [], 'username': [], 'text': [], 'Anger': [], 'Fear': [], 'Joy': [], 'Sadness': [], 'Analytical': [], 'Confident': [], 'Tentative': []}\n",
+    "    with open(input_filepath, 'r') as csv_file:\n",
+    "        csv_reader = csv.DictReader(csv_file)\n",
+    "        for row in csv_reader:\n",
+    "            result = analyze_tones(row['post content'])\n",
     "\n",
-    "with open(input_filepath, 'r') as csv_file:\n",
-    "    csv_reader = csv.DictReader(csv_file)\n",
-    "    for row in csv_reader:\n",
-    "        result = analyze_tones(row['post content'])\n",
-    "        \n",
-    "        # document level tones        \n",
-    "        sentiments_doclevel['post #'].append(row[''])\n",
-    "        sentiments_doclevel['username'].append(row['username'])\n",
-    "        sentiments_doclevel['text'].append(row['post content'])\n",
-    "        doclevel_tones = to_tone_dict(result['document_tone']['tones'])\n",
-    "        for tone in doclevel_tones.keys():\n",
-    "            sentiments_doclevel[tone].append(doclevel_tones[tone])\n",
-    "        \n",
-    "        # if only one sentence- only doc tones, no sentence tone\n",
-    "        if 'sentences_tone' in result:\n",
-    "            # sentence level tones\n",
-    "            for sentence in result['sentences_tone']:\n",
-    "                sentiments_sentencelevel['post #'].append(row[''])\n",
-    "                sentiments_sentencelevel['username'].append(row['username'])\n",
-    "                sentiments_sentencelevel['text'].append(sentence['text'])\n",
-    "                sentencelevel_tones = to_tone_dict(sentence['tones'])\n",
-    "                for tone in sentencelevel_tones.keys():\n",
-    "                    sentiments_sentencelevel[tone].append(sentencelevel_tones[tone])"
+    "            # document level tones        \n",
+    "            sentiments_doclevel['post #'].append(row[''])\n",
+    "            sentiments_doclevel['username'].append(row['username'])\n",
+    "            sentiments_doclevel['text'].append(row['post content'])\n",
+    "            doclevel_tones = to_tone_dict(result['document_tone']['tones'])\n",
+    "            for tone in doclevel_tones.keys():\n",
+    "                sentiments_doclevel[tone].append(doclevel_tones[tone])\n",
+    "\n",
+    "            # if only one sentence- only doc tones, no sentence tone\n",
+    "            if 'sentences_tone' in result:\n",
+    "                # sentence level tones\n",
+    "                for sentence in result['sentences_tone']:\n",
+    "                    sentiments_sentencelevel['post #'].append(row[''])\n",
+    "                    sentiments_sentencelevel['username'].append(row['username'])\n",
+    "                    sentiments_sentencelevel['text'].append(sentence['text'])\n",
+    "                    sentencelevel_tones = to_tone_dict(sentence['tones'])\n",
+    "                    for tone in sentencelevel_tones.keys():\n",
+    "                        sentiments_sentencelevel[tone].append(sentencelevel_tones[tone])\n",
+    "    return pd.DataFrame(sentiments_doclevel), pd.DataFrame(sentiments_sentencelevel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# take output and put into raw data output folder\n",
-    "output_file_doclevel = input_file + '_doclevelsentiments'\n",
-    "output_filename_doclevel = '../../data/raw/sentiments/' + output_file_doclevel + '.csv'\n",
-    "df = pd.DataFrame(sentiments_doclevel)\n",
-    "df.to_csv(output_filename_doclevel, index=False)\n",
-    "\n",
-    "output_file_sentencelevel = input_file + '_sentencelevelsentiments'\n",
-    "output_filename_sentencelevel = '../../data/raw/sentiments/' + output_file_sentencelevel + '.csv'\n",
-    "df = pd.DataFrame(sentiments_sentencelevel)\n",
-    "df.to_csv(output_filename_sentencelevel, index=False)"
+    "input_files = ['singlesentence', 'mamistruggling', 'battlingdepressionnomeds', 'relationshipproblems']\n",
+    "n = 200\n",
+    "for filename in input_files:\n",
+    "    input_filename = '../../data/raw/posts/' + filename\n",
+    "    doclevel, sentencelevel = analyze_posts(input_filename + str(n) + '.csv')\n",
+    "    doclevel.to_csv('../../data/raw/sentiments/' + filename + str(n) + '_doclevelsentiments.csv', index=False)\n",
+    "    sentencelevel.to_csv('../../data/raw/sentiments/' + filename + str(n) + '_sentencelevelsentiments.csv', index=False)\n",
+    "    print('finished with ' + filename + str(n) + '.csv')"
    ]
   }
  ],
