noticed that relationshipproblems had only 1 post, exchanged for 'lonely'

--- a/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
+++ b/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 124,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -123,9 +123,9 @@
    "outputs": [],
    "source": [
     "raw_data_directory = '../../data/raw/posts/'\n",
-    "forum_ids = [97215, 186460, 30827, 188400]\n",
-    "output_files = ['singlesentence', 'mamistruggling', 'battlingdepressionnomeds', 'relationshipproblems']\n",
-    "num_posts = 100\n",
+    "forum_ids = [97215, 186460, 30827, 41312]\n",
+    "output_files = ['singlesentence', 'mamistruggling', 'battlingdepressionnomeds', 'lonely']\n",
+    "num_posts = 200\n",
     "\n",
     "for forum_id, output_file in zip(forum_ids, output_files):\n",
     "    getNPosts(forum_id, num_posts).to_csv(raw_data_directory + output_file + str(num_posts) + '.csv')"
