--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -245,12 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished with lonely200.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# take output and put into raw data output folder\n",
-    "input_files = ['singlesentence', 'mamistruggling', 'battlingdepressionnomeds', 'relationshipproblems']\n",
+    "input_files = ['singlesentence', 'mamistruggling', 'battlingdepressionnomeds', 'lonely']\n",
     "n = 200\n",
     "for filename in input_files:\n",
     "    input_filename = '../../data/raw/posts/' + filename\n",
