re-ran all functions, minor edits to each

--- a/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
+++ b/notebook/exploratory_analysis/healthforum_posts_webscraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 209,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 210,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -83,7 +83,7 @@
     "                        post_text += '(' + content['title'] + ')'\n",
     "                    except KeyError as ex:\n",
     "                        if content.text is not None:\n",
-    "                            post_text += \" \" + content.text + \n",
+    "                            post_text += \" \" + content.text + \" \"\n",
     "                        else:\n",
     "                            print('uncategorizable text: ' + content)\n",
     "\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 211,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -118,62 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 212,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "7ECuK3DTpqx8"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mark_01 2014-10-19 05:23:00 <a href=\"https://www.youtube.com/watch?list=UUBW5eEwn7Z2l6Dv5O_etwpg&amp;v=ctV1C0YpyTU\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?list=UUBW5eEwn7Z2l6Dv5O_etwpg&amp;v=ctV1C0YpyTU');\" rel=\"nofollow\" target=\"_blank\"> John Nash, A Beautiful Mind</a>\n",
-      "Noetic 2014-10-19 16:13:00 <a href=\"http://s1377.photobucket.com/user/noeticnoetic/media/Mobile%20Uploads/valentine_chocolate_eating_smiley_zps0pyflvo1.gif.html\" onclick=\"ga('send', 'event', 'Outgoing', 's1377.photobucket.com', '/user/noeticnoetic/media/Mobile%20Uploads/valentine_chocolate_eating_smiley_zps0pyflvo1.gif.html');\" rel=\"nofollow\" target=\"_blank\"><img alt=\"\" border=\"0\" src=\"https://i1377.photobucket.com/albums/ah63/noeticnoetic/Mobile%20Uploads/valentine_chocolate_eating_smiley_zps0pyflvo1.gif\"/></a>\n",
-      "Lincoln1990 2014-10-21 04:42:00 <i>should</i>\n",
-      "Lincoln1990 2014-10-23 04:29:00 <b> a lot </b>\n",
-      "Lincoln1990 2014-10-24 04:15:00 <b> highly </b>\n",
-      "Lincoln1990 2014-10-24 04:31:00 <b> everything </b>\n",
-      "Noetic 2014-10-26 18:37:00 <a href=\"http://s1377.photobucket.com/user/noeticnoetic/media/Mobile%20Uploads/zP7kem47HlWpz4End53g_zpsk00vmy6j.gif.html\" onclick=\"ga('send', 'event', 'Outgoing', 's1377.photobucket.com', '/user/noeticnoetic/media/Mobile%20Uploads/zP7kem47HlWpz4End53g_zpsk00vmy6j.gif.html');\" rel=\"nofollow\" target=\"_blank\"><img alt=\"\" border=\"0\" src=\"https://i1377.photobucket.com/albums/ah63/noeticnoetic/Mobile%20Uploads/zP7kem47HlWpz4End53g_zpsk00vmy6j.gif\"/></a>\n",
-      "Noetic 2014-10-26 20:48:00 <a href=\"http://s1377.photobucket.com/user/noeticnoetic/media/Mobile%20Uploads/2066a_zpsjlwuxiqt.gif.html\" onclick=\"ga('send', 'event', 'Outgoing', 's1377.photobucket.com', '/user/noeticnoetic/media/Mobile%20Uploads/2066a_zpsjlwuxiqt.gif.html');\" rel=\"nofollow\" target=\"_blank\"><img alt=\"\" border=\"0\" src=\"https://i1377.photobucket.com/albums/ah63/noeticnoetic/Mobile%20Uploads/2066a_zpsjlwuxiqt.gif\"/></a>\n",
-      "Mayflower7 2018-08-27 23:11:00 <a href=\"https://www.mentalhealthforum.net/info/suicidal-crisis/\" target=\"_blank\">Suicidal Crisis – Mental Health Forum</a>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>never stop feeling the effects</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>always</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>what if</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>lies</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>always</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>better off</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>are</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>here</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <i>could... just might,</i>\n",
-      "AliceinWonderland 2018-08-29 08:27:00 <a href=\"https://www.buzzfeed.com/maggyvaneijk/its-a-human-experience?utm_term=.sar9bVRRk#.psagaJAAW\" onclick=\"ga('send', 'event', 'Outgoing', 'www.buzzfeed.com', '/maggyvaneijk/its-a-human-experience?utm_term=.sar9bVRRk');\" rel=\"nofollow\" target=\"_blank\">13 Lies Your Depression Is Telling You</a>\n",
-      "Aurelius 2018-09-18 23:56:00 <a href=\"https://www.drugs.com/sfx/duloxetine-side-effects.html\" onclick=\"ga('send', 'event', 'Outgoing', 'www.drugs.com', '/sfx/duloxetine-side-effects.html');\" rel=\"nofollow\" target=\"_blank\">Duloxetine Side Effects in Detail - Drugs.com</a>\n",
-      "Aurelius 2018-10-14 17:38:00 <u><b> do not hesitate to refer at the outset to your psychologist's validation</b></u>\n",
-      "Aurelius 2018-10-17 00:11:00 <b><u>you are very brave Mami!!</u></b>\n",
-      "madmark 2011-10-26 07:58:00 <a href=\"https://www.facebook.com/#!/topic.php?uid=29813531299&amp;topic=19270\" onclick=\"ga('send', 'event', 'Outgoing', 'www.facebook.com', '/');\" rel=\"nofollow\" target=\"_blank\">http://www.facebook.com/#!/topic.php...99&amp;topic=19270</a>\n",
-      "maxitab 2011-10-27 11:27:00 <a href=\"http://www.anxietycoach.com\" onclick=\"ga('send', 'event', 'Outgoing', 'www.anxietycoach.com', '');\" rel=\"nofollow\" target=\"_blank\">www.anxietycoach.com</a>\n",
-      "madmark 2011-12-14 08:18:00 <a href=\"https://www.youtube.com/watch?v=BQaM5KhndhI\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=BQaM5KhndhI');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=BQaM5KhndhI</a>\n",
-      "madmark 2011-12-14 08:18:00 <a href=\"https://www.youtube.com/watch?v=qrpBn43A2Ak\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=qrpBn43A2Ak');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=qrpBn43A2Ak</a>\n",
-      "Apotheosis 2012-01-18 02:16:00 <a href=\"http://www.jungcircle.com/depression.html\" onclick=\"ga('send', 'event', 'Outgoing', 'www.jungcircle.com', '/depression.html');\" rel=\"nofollow\" target=\"_blank\">http://www.jungcircle.com/depression.html</a>\n",
-      "Apotheosis 2012-01-18 11:49:00 <a href=\"https://www.mentalhealthforum.net/forum/showthread.php?29302-Metaphysical-Explanations\" rel=\"nofollow\" target=\"_blank\">http://www.mentalhealthforum.net/for...l-Explanations</a>\n",
-      "madmark 2012-02-13 21:52:00 <a href=\"https://www.youtube.com/watch?v=YVFku0P7qTA&amp;feature=share\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=YVFku0P7qTA&amp;feature=share');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=YVFku...&amp;feature=share</a>\n",
-      "madmark 2012-02-14 07:56:00 <a href=\"https://www.youtube.com/watch?v=vHGqGmzzQaY\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=vHGqGmzzQaY');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=vHGqGmzzQaY</a>\n",
-      "madmark 2012-02-14 08:06:00 <a href=\"https://www.youtube.com/watch?v=jBz6nXgef9Q&amp;feature=related\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=jBz6nXgef9Q&amp;feature=related');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=jBz6n...eature=related</a>\n",
-      "madmark 2012-03-15 08:25:00 <a href=\"https://www.youtube.com/watch?v=xLpfbcXTeo8&amp;ob=av3e\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=xLpfbcXTeo8&amp;ob=av3e');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=xLpfbcXTeo8&amp;ob=av3e</a>\n",
-      "madmark 2012-04-07 11:12:00 <a href=\"https://www.youtube.com/watch?v=tNpVNSnd68U&amp;feature=related\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=tNpVNSnd68U&amp;feature=related');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=tNpVN...eature=related</a>\n",
-      "madmark 2012-04-28 10:37:00 <a href=\"https://www.youtube.com/watch?v=ALrJ17qKpHg&amp;feature=share\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=ALrJ17qKpHg&amp;feature=share');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=ALrJ1...&amp;feature=share</a>\n",
-      "madmark 2012-05-13 23:29:00 <a href=\"https://www.youtube.com/watch?v=nPT5cub1mZk&amp;feature=related\" onclick=\"ga('send', 'event', 'Outgoing', 'www.youtube.com', '/watch?v=nPT5cub1mZk&amp;feature=related');\" rel=\"nofollow\" target=\"_blank\">http://www.youtube.com/watch?v=nPT5c...eature=related</a>\n",
-      "Starless 2012-05-26 20:47:00 <i>am</i>\n",
-      "-Phoenix- 2012-05-27 00:30:00 <i>We'll keep a welcome in the hillside,<br/>\n",
-      "We'll keep a welcome in the vales,<br/>\n",
-      "This land you knew will still be singing,<br/>\n",
-      "When you come home again to Wales!</i>\n",
-      "Wiseowl 2012-05-28 12:42:00 <a href=\"http://www.greengardener.co.uk/\" onclick=\"ga('send', 'event', 'Outgoing', 'www.greengardener.co.uk', '/');\" rel=\"nofollow\" target=\"_blank\">http://www.greengardener.co.uk/</a>\n",
-      "bulbie 2012-05-30 11:52:00 <font size=\"1\">cake</font>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_data_directory = '../../data/raw/posts/'\n",
     "forum_ids = [97215, 186460, 30827, 41312]\n",
@@ -186,21 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starless 2012-05-26 20:47:00 <i>am</i>\n",
-      "-Phoenix- 2012-05-27 00:30:00 <i>We'll keep a welcome in the hillside,<br/>\n",
-      "We'll keep a welcome in the vales,<br/>\n",
-      "This land you knew will still be singing,<br/>\n",
-      "When you come home again to Wales!</i>\n",
-      "Wiseowl 2012-05-28 12:42:00 <a href=\"http://www.greengardener.co.uk/\" onclick=\"ga('send', 'event', 'Outgoing', 'www.greengardener.co.uk', '/');\" rel=\"nofollow\" target=\"_blank\">http://www.greengardener.co.uk/</a>\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -791,7 +730,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
