--- a/notebook/exploratory_analysis/watson_data_collection.ipynb
+++ b/notebook/exploratory_analysis/watson_data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -13,10 +13,10 @@
       "Requirement already satisfied, skipping upgrade: requests<3.0,>=2.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from watson-developer-cloud>=2.2.6) (2.19.1)\n",
       "Requirement already satisfied, skipping upgrade: python_dateutil>=2.5.3 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from watson-developer-cloud>=2.2.6) (2.7.3)\n",
       "Requirement already satisfied, skipping upgrade: websocket-client==0.47.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from watson-developer-cloud>=2.2.6) (0.47.0)\n",
-      "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from requests<3.0,>=2.0->watson-developer-cloud>=2.2.6) (3.0.4)\n",
       "Requirement already satisfied, skipping upgrade: idna<2.8,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from requests<3.0,>=2.0->watson-developer-cloud>=2.2.6) (2.7)\n",
       "Requirement already satisfied, skipping upgrade: urllib3<1.24,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from requests<3.0,>=2.0->watson-developer-cloud>=2.2.6) (1.23)\n",
       "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from requests<3.0,>=2.0->watson-developer-cloud>=2.2.6) (2018.8.24)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from requests<3.0,>=2.0->watson-developer-cloud>=2.2.6) (3.0.4)\n",
       "Requirement already satisfied, skipping upgrade: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from python_dateutil>=2.5.3->watson-developer-cloud>=2.2.6) (1.11.0)\n"
      ]
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "text:\n",
-      "We have a competitive product, but we need to do a better job of selling it!\n",
+      "Team, I know that times are tough! Product sales have been disappointing for the past three quarters. We have a competitive product, but we need to do a better job of selling it!\n",
       "\n",
       "\n",
       "direct output:\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,13 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "finished with singlesentence200.csv\n",
+      "finished with mamistruggling200.csv\n",
+      "finished with battlingdepressionnomeds200.csv\n",
       "finished with lonely200.csv\n"
      ]
     }
