--- a/notebook/exploratory_analysis/rake_nltk.ipynb
+++ b/notebook/exploratory_analysis/rake_nltk.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: rake_nltk in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.0.4)\r\n",
+      "Requirement already satisfied: nltk in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from rake_nltk) (3.3)\r\n",
+      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from nltk->rake_nltk) (1.11.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 -m pip install rake_nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
