--- a/notebook/exploratory_analysis/rake_nltk.ipynb
+++ b/notebook/exploratory_analysis/rake_nltk.ipynb
@@ -2,26 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: rake_nltk in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.0.4)\r\n",
-      "Requirement already satisfied: nltk in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from rake_nltk) (3.3)\r\n",
-      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from nltk->rake_nltk) (1.11.0)\r\n"
+      "Collecting rake_nltk\n",
+      "  Downloading https://files.pythonhosted.org/packages/8e/c4/b4ff57e541ac5624ad4b20b89c2bafd4e98f29fd83139f3a81858bdb3815/rake_nltk-1.0.4.tar.gz\n",
+      "Collecting nltk (from rake_nltk)\n",
+      "  Downloading https://files.pythonhosted.org/packages/50/09/3b1755d528ad9156ee7243d52aa5cd2b809ef053a0f31b53d92853dd653a/nltk-3.3.0.zip (1.4MB)\n",
+      "Requirement already satisfied: six in c:\\users\\yuqik\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from nltk->rake_nltk)\n",
+      "Installing collected packages: nltk, rake-nltk\n",
+      "  Running setup.py install for nltk: started\n",
+      "    Running setup.py install for nltk: finished with status 'done'\n",
+      "  Running setup.py install for rake-nltk: started\n",
+      "    Running setup.py install for rake-nltk: finished with status 'done'\n",
+      "Successfully installed nltk-3.3 rake-nltk-1.0.4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 9.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
    "source": [
-    "!python3 -m pip install rake_nltk"
+    "!pip install rake_nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
