--- a/notebook/exploratory_analysis/rake_nltk.ipynb
+++ b/notebook/exploratory_analysis/rake_nltk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -11,25 +11,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting rake_nltk\n",
-      "  Downloading https://files.pythonhosted.org/packages/8e/c4/b4ff57e541ac5624ad4b20b89c2bafd4e98f29fd83139f3a81858bdb3815/rake_nltk-1.0.4.tar.gz\n",
-      "Collecting nltk (from rake_nltk)\n",
-      "  Downloading https://files.pythonhosted.org/packages/50/09/3b1755d528ad9156ee7243d52aa5cd2b809ef053a0f31b53d92853dd653a/nltk-3.3.0.zip (1.4MB)\n",
-      "Requirement already satisfied: six in c:\\users\\yuqik\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from nltk->rake_nltk)\n",
-      "Installing collected packages: nltk, rake-nltk\n",
-      "  Running setup.py install for nltk: started\n",
-      "    Running setup.py install for nltk: finished with status 'done'\n",
-      "  Running setup.py install for rake-nltk: started\n",
-      "    Running setup.py install for rake-nltk: finished with status 'done'\n",
-      "Successfully installed nltk-3.3 rake-nltk-1.0.4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 9.0.1, however version 18.1 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+      "Requirement already satisfied: rake_nltk in c:\\users\\yuqik\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (1.0.4)\n",
+      "Requirement already satisfied: nltk in c:\\users\\yuqik\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from rake_nltk) (3.3)\n",
+      "Requirement already satisfied: six in c:\\users\\yuqik\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from nltk->rake_nltk) (1.11.0)\n"
      ]
     }
    ],
@@ -39,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +650,7 @@
        "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,8 +710,234 @@
     "        \n",
     "        # Assign min or max length to the attributes\n",
     "        self.min_length = min_length\n",
-    "        self.max_leng"
+    "        self.max_length = max_length\n",
+    "        \n",
+    "        # Stuff to be extracted from the provided text\n",
+    "        self.frequency_dist = None\n",
+    "        self.degree = None\n",
+    "        self.rank_list = None\n",
+    "        self.ranked_phrases = None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def extract_keywords_from_text(self, data['post content']):\n",
+    "        \"\"\"Method to extract keywords from the text provided.\n",
+    "        \n",
+    "        :param text: Text to extract keywords from, provided as a string.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        sentences = nltk.tokenize.sent_tokenize(data['post content'])\n",
+    "        self.extract_keywords_from_sentences(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def extract_keywords_from_sentences(self, sentences):\n",
+    "        \"\"\"Method to extract keywords from the list of sentences provided.\n",
+    "        :param sentences: Text to extraxt keywords from, provided as a list\n",
+    "                          of strings, where each string is a sentence.\n",
+    "        \"\"\"\n",
+    "        phrase_list = self._generate_phrases(sentences)\n",
+    "        self._build_frequency_dist(phrase_list)\n",
+    "        self._build_word_co_occurance_graph(phrase_list)\n",
+    "        self._build_ranklist(phrase_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def get_ranked_phrases(self):\n",
+    "        \"\"\"Method to fetch ranked keyword strings.\n",
+    "        :return: List of strings where each string represents an extracted\n",
+    "                 keyword string.\n",
+    "        \"\"\"\n",
+    "        return self.ranked_phrases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def get_ranked_phrases_with_scores(self):\n",
+    "        \"\"\"Method to fetch ranked keyword strings along with their scores.\n",
+    "        :return: List of tuples where each tuple is formed of an extracted\n",
+    "                 keyword string and its score. Ex: (5.68, 'Four Scoures')\n",
+    "        \"\"\"\n",
+    "        return self.rank_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     def get_word_frequency_distribution(self):\n",
+    "        \"\"\"Method to fetch the word frequency distribution in the given text.\n",
+    "        :return: Dictionary (defaultdict) of the format `word -> frequency`.\n",
+    "        \"\"\"\n",
+    "        return self.frequency_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     def get_word_degrees(self):\n",
+    "        \"\"\"Method to fetch the degree of words in the given text. Degree can be\n",
+    "        defined as sum of co-occurances of the word with other words in the\n",
+    "        given text.\n",
+    "        :return: Dictionary (defaultdict) of the format `word -> degree`.\n",
+    "        \"\"\"\n",
+    "        return self.degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     def _build_frequency_dist(self, phrase_list):\n",
+    "        \"\"\"Builds frequency distribution of the words in the given body of text.\n",
+    "        :param phrase_list: List of List of strings where each sublist is a\n",
+    "                            collection of words which form a contender phrase.\n",
+    "        \"\"\"\n",
+    "        self.frequency_dist = Counter(chain.from_iterable(phrase_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def _build_word_co_occurance_graph(self, phrase_list):\n",
+    "        \"\"\"Builds the co-occurance graph of words in the given body of text to\n",
+    "        compute degree of each word.\n",
+    "        :param phrase_list: List of List of strings where each sublist is a\n",
+    "                            collection of words which form a contender phrase.\n",
+    "        \"\"\"\n",
+    "        co_occurance_graph = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "        for phrase in phrase_list:\n",
+    "            # For each phrase in the phrase list, count co-occurances of the\n",
+    "            # word with other words in the phrase.\n",
+    "            #\n",
+    "            # Note: Keep the co-occurances graph as is, to help facilitate its\n",
+    "            # use in other creative ways if required later.\n",
+    "            for (word, coword) in product(phrase, phrase):\n",
+    "                co_occurance_graph[word][coword] += 1\n",
+    "        self.degree = defaultdict(lambda: 0)\n",
+    "        for key in co_occurance_graph:\n",
+    "            self.degree[key] = sum(co_occurance_graph[key].values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     def _build_ranklist(self, phrase_list):\n",
+    "        \"\"\"Method to rank each contender phrase using the formula\n",
+    "              phrase_score = sum of scores of words in the phrase.\n",
+    "              word_score = d(w)/f(w) where d is degree and f is frequency.\n",
+    "        :param phrase_list: List of List of strings where each sublist is a\n",
+    "                            collection of words which form a contender phrase.\n",
+    "        \"\"\"\n",
+    "        self.rank_list = []\n",
+    "        for phrase in phrase_list:\n",
+    "            rank = 0.0\n",
+    "            for word in phrase:\n",
+    "                if self.metric == Metric.DEGREE_TO_FREQUENCY_RATIO:\n",
+    "                    rank += 1.0 * self.degree[word] / self.frequency_dist[word]\n",
+    "                elif self.metric == Metric.WORD_DEGREE:\n",
+    "                    rank += 1.0 * self.degree[word]\n",
+    "                else:\n",
+    "                    rank += 1.0 * self.frequency_dist[word]\n",
+    "            self.rank_list.append((rank, \" \".join(phrase)))\n",
+    "        self.rank_list.sort(reverse=True)\n",
+    "        self.ranked_phrases = [ph[1] for ph in self.rank_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def _generate_phrases(self, sentences):\n",
+    "        \"\"\"Method to generate contender phrases given the sentences of the text\n",
+    "        document.\n",
+    "        :param sentences: List of strings where each string represents a\n",
+    "                          sentence which forms the text.\n",
+    "        :return: Set of string tuples where each tuple is a collection\n",
+    "                 of words forming a contender phrase.\n",
+    "        \"\"\"\n",
+    "        phrase_list = set()\n",
+    "        # Create contender phrases from sentences.\n",
+    "        for sentence in sentences:\n",
+    "            word_list = [word.lower() for word in wordpunct_tokenize(sentence)]\n",
+    "            phrase_list.update(self._get_phrase_list_from_words(word_list))\n",
+    "        return phrase_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "     def _get_phrase_list_from_words(self, word_list):\n",
+    "        \"\"\"Method to create contender phrases from the list of words that form\n",
+    "        a sentence by dropping stopwords and punctuations and grouping the left\n",
+    "        words into phrases. Only phrases in the given length range (both limits\n",
+    "        inclusive) would be considered to build co-occurrence matrix. Ex:\n",
+    "        Sentence: Red apples, are good in flavour.\n",
+    "        List of words: ['red', 'apples', \",\", 'are', 'good', 'in', 'flavour']\n",
+    "        List after dropping punctuations and stopwords.\n",
+    "        List of words: ['red', 'apples', *, *, good, *, 'flavour']\n",
+    "        List of phrases: [('red', 'apples'), ('good',), ('flavour',)]\n",
+    "        List of phrases with a correct length:\n",
+    "        For the range [1, 2]: [('red', 'apples'), ('good',), ('flavour',)]\n",
+    "        For the range [1, 1]: [('good',), ('flavour',)]\n",
+    "        For the range [2, 2]: [('red', 'apples')]\n",
+    "        :param word_list: List of words which form a sentence when joined in\n",
+    "                          the same order.\n",
+    "        :return: List of contender phrases that are formed after dropping\n",
+    "                 stopwords and punctuations.\n",
+    "        \"\"\"\n",
+    "        groups = groupby(word_list, lambda x: x not in self.to_ignore)\n",
+    "        phrases = [tuple(group[1]) for group in groups if group[0]]\n",
+    "        return list(\n",
+    "            filter(\n",
+    "                lambda x: self.min_length <= len(x) <= self.max_length, phrases\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
